check_errors.txt
cargo :     Checking 
opc-cli v0.1.0 (C:\Us
ers\WSALIGAN\code\opc
-cli)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 check_errors.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : 
NotSpecified: (      
  Checking op...N\co 
   
de\opc-cli):String) 
[    ], 
RemoteException
    + 
FullyQualifiedError  
  Id : 
NativeCommandErr    
or
 
error[E0308]: 
mismatched types
  --> 
src\app.rs:52:13
   |
51 |         match se
lf.opc_provider.list_
servers(&host) {
   |               --
---------------------
-------------- this 
expression has type 
`Pin<Box<dyn 
Future<Output = Resul
t<Vec<std::string::St
ring>, 
anyhow::Error>> + 
Send>>`
52 |             
Ok(servers) => {
   |             
^^^^^^^^^^^ expected 
`Pin<Box<...>>`, 
found `Result<_, _>`
   |
   = note: expected 
struct `Pin<Box<dyn 
Future<Output = Resul
t<Vec<std::string::St
ring>, 
anyhow::Error>> + 
Send>>`
                
found enum 
`Result<_, _>`

error[E0308]: 
mismatched types
  --> 
src\app.rs:64:13
   |
51 |         match se
lf.opc_provider.list_
servers(&host) {
   |               --
---------------------
-------------- this 
expression has type 
`Pin<Box<dyn 
Future<Output = Resul
t<Vec<std::string::St
ring>, 
anyhow::Error>> + 
Send>>`
...
64 |             
Err(e) => {
   |             
^^^^^^ expected 
`Pin<Box<...>>`, 
found `Result<_, _>`
   |
   = note: expected 
struct `Pin<Box<dyn 
Future<Output = Resul
t<Vec<std::string::St
ring>, 
anyhow::Error>> + 
Send>>`
                
found enum 
`Result<_, _>`

error[E0308]: 
mismatched types
   --> 
src\app.rs:115:21
    |
114 |                
 match self.opc_provi
der.browse_tags(&serv
er) {
    |                
       --------------
---------------------
--- this expression 
has type 
`Pin<Box<dyn 
Future<Output = Resul
t<Vec<std::string::St
ring>, 
anyhow::Error>> + 
Send>>`
115 |                
     Ok(tags) => {
    |                
     ^^^^^^^^ 
expected 
`Pin<Box<...>>`, 
found `Result<_, _>`
    |
    = note: expected 
struct `Pin<Box<dyn 
Future<Output = Resul
t<Vec<std::string::St
ring>, 
anyhow::Error>> + 
Send>>`
                 
found enum 
`Result<_, _>`

error[E0308]: 
mismatched types
   --> 
src\app.rs:127:21
    |
114 |                
 match self.opc_provi
der.browse_tags(&serv
er) {
    |                
       --------------
---------------------
--- this expression 
has type 
`Pin<Box<dyn 
Future<Output = Resul
t<Vec<std::string::St
ring>, 
anyhow::Error>> + 
Send>>`
...
127 |                
     Err(e) => {
    |                
     ^^^^^^ expected 
`Pin<Box<...>>`, 
found `Result<_, _>`
    |
    = note: expected 
struct `Pin<Box<dyn 
Future<Output = Resul
t<Vec<std::string::St
ring>, 
anyhow::Error>> + 
Send>>`
                 
found enum 
`Result<_, _>`

For more information 
about this error, 
try `rustc --explain 
E0308`.
error: could not 
compile `opc-cli` 
(bin "opc-cli") due 
to 4 previous errors
